--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ header{
    z-index: 11;
 }
 
+.showWhenMobile{
+   display: none;
+}
+
 header nav{
    display: flex;
    gap: 2rem;
@@ -482,10 +486,11 @@ header nav{
 
 .dropdown .clickable p{
    font-weight: 600;
+   /* display: inline; */
 }
 
-.dropdown .clickable i{
-   width: 60px;
+.dropdown .clickable button{
+   width: 110px;
    height: 60px;
    display: grid;
    place-items: center;
@@ -493,8 +498,15 @@ header nav{
    background: var(--dark-blue);
    color: var(--white);
    font-size: 1.5rem;
+   padding: 0.5rem;
+   box-sizing: border-box;
    
 }
+.dropdown .clickable .plusToX *{
+   color: var(--white);
+   stroke: currentColor;
+}
+
 
 .dropdown .hiddenText{
    height: 0;
@@ -813,6 +825,9 @@ footer li a{
 }
 
 @media (max-width:768px) {
+   .showWhenMobile{
+      display: block;
+   }
    .menuToggle *,.menuClose *{
       color: var(--white);
       fill: currentColor;
@@ -839,28 +854,26 @@ footer li a{
       bottom: 0;
       left: 0;
       z-index: -1;
-      opacity: 0;
-      transition: opacity 3s cubic-bezier(1,0,0,1);
-
+      display: none;
    }
 
    nav::before{
       content: '';
       position: absolute;
       width: 100%;
-      height: 100vh;
+      height: 200vh;
       background: #18181898;
       bottom: 0;
       left: 0;
       z-index: -1;
-      opacity: 0;
-      transition: opacity 3s cubic-bezier(1,0,0,1);
+      display: none;
    }
    nav.active{
       bottom: 0;
    }
    nav.active::after, nav.active::before{
       opacity: 1;
+      display: block;
    }
    #hero{
       grid-template-columns: repeat(1,1fr);
