--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ header nav{
 /* blog styling */
 
 .blog{
-   padding: 3rem 10rem;
+   padding: 3rem 10rem 7rem;
 }
 
 .blogArticlesContainer{
@@ -579,8 +579,8 @@ header nav{
 
 
 .loadMoreArticles{
-   margin: auto;
-   display: block;
+   /* margin: auto; */
+   display: inline-block;
 
    padding: 1rem 3rem;
    border: 4px solid var(--dark-blue);
@@ -588,6 +588,9 @@ header nav{
    color: var(--dark-blue);
    font-size: 1.4rem;
    transition: 0.3s;
+   position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
 }
 
 .loadMoreArticles:hover{
